--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-Hello World
-<h1> Test </h1>
+<h1> Jesse Weder </h1>
+<h2> PhD Student, University of Bern, Switzerland </h2>
+
+<p> I am working on protoplanetary disc evolution and its influence on planetary populations. We try to combine different models for disc limited gas accretion, trying to get a better understanding of the planetary mass function. Finally we would like to make predictions of the mass function for observations by the ROMAN space telescope. </p>
